[gd_scene load_steps=6 format=3 uid="uid://1e75tdlxkxaf"]

[ext_resource type="Texture2D" uid="uid://bsohgxfqjjgjm" path="res://assets/sprites/scroll.png" id="1_k2yvg"]
[ext_resource type="Script" path="res://game/curse_constructor/curse_word_button/curse_word_button.gd" id="2_r62q1"]

[sub_resource type="Animation" id="Animation_qsnaq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 3
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_fhrq8"]
resource_name = "waiting"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 3
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3996, 0.7992, 1.1988, 1.5984),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.1309, 0.0, -0.1309, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_34tf6"]
_data = {
"RESET": SubResource("Animation_qsnaq"),
"waiting": SubResource("Animation_fhrq8")
}

[node name="CurseWordButton" type="TextureButton"]
custom_minimum_size = Vector2(256, 256)
offset_right = 256.0
offset_bottom = 256.0
pivot_offset = Vector2(128, 128)
texture_normal = ExtResource("1_k2yvg")
texture_pressed = ExtResource("1_k2yvg")
texture_hover = ExtResource("1_k2yvg")
ignore_texture_size = true
stretch_mode = 4
script = ExtResource("2_r62q1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_34tf6")
}

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
